# honduras_complexity

./: README.md  actividades_transables_usa.py  calculos_complejidad_hnd.py  ciiu_rev_3-ciiu_rev_4-scian_2023.py  ciiu_rev_4-naics_2022.py  clases_transables_by_cluster_naics_2017.json  complejidad_municipios.py  construye_datos_complejidad_usa_hnd.py  construye_datos_complejidad_usa_hnd_ecu.py  construye_portafolios_usa_hnd.py  construye_visualizaciones_complejidad_usa_hnd.py  denue_preprocesa.py  espacio_producto.py  indstat.py  main.py  meta_validation_bipartite_network.py  oecd_data.py  ponderadores_isic_hs12_concordance.R  ponderadores_isic_naics_concordance.R  preprocesa_ocde_sbs.py  pyproject.toml  recodifica_homologa_datos.py  viabilidad_atractivo.py
.ipynb_checkpoints/: ciiu_rev_3-ciiu_rev_4-scian_2023-checkpoint.ipynb
datos/: BASE-DEE-2024.parquet  resumen_razones_transables.csv
datos/INDSTAT/: activity.csv  data.parquet
datos/SLV/: slv_ciiu_2019.csv
datos/atlas_datos/: API_NY.GDP.PCAP.PP.CD_DS2_en_csv_v2_43.csv  growth_proj_eci_rankings.csv  hs92_country_product_year_4.parquet
datos/cw/: ciiu_rev_3_to_ciiu_rev_4.csv  ciiu_rev_4_nombres_actividades.csv  ciiu_rev_4_to_scian_2023.csv  scian_2023_nombres_actividades.csv
datos/empleo_USA/: cbp_recod.csv  usa_ciiu_raw.csv
datos/empleo_ecuador/: empleo_ecuador_2019.csv  empleo_ecuador_2019_raw.csv
datos/empleo_honduras/: empleo_departamentos.csv  empleo_honduras.csv  (+1 more)
delta_db/: cbp.parquet  empleo_honduras.parquet  ue_honduras.parquet
julia_env/: Manifest.toml  Project.toml
src/: bicm.py
(+45 files in other folders)
