[project]
name = "honduras"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ecomplexity>=0.5.3",
    "geopandas>=1.1.2",
    "igraph>=1.0.0",
    "ipysigma>=0.24.6",
    "ipython==7.23.1",
    "marimo>=0.19.7",
    "networkx>=3.6.1",
    "notebook>=7.5.3",
    "numpy>=2.4.2",
    "polars[all]>=1.37.1",
    "py2cytoscape>=0.7.1",
    "pyqt5==5.15.10",
    "seaborn>=0.13.2",
    "unicode>=2.9",
    "unidecode>=1.4.0",
]
